<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/permissionBox"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/required_permissions"/>

        <CheckBox
            android:id="@+id/location"
            android:clickable="false"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/location_permission" />
        <CheckBox
            android:checked="true"
            android:id="@+id/activity"
            android:clickable="false"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/activity_recognition"/>
        <CheckBox
            android:id="@+id/internet"
            android:checked="true"
            android:clickable="false"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/internet_access"/>
        <CheckBox
            android:id="@+id/wifi"
            android:checked="true"
            android:clickable="false"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/wifi_permission"/>
        <CheckBox
            android:id="@+id/bluetooth"
            android:checked="true"
            android:clickable="false"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/bluetooth_permission"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/askPermission"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/grant_permissions"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/loginBox"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/api_key"
            android:inputType="text"
            android:hint="@string/enter_api_key"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_environment"/>
        <Spinner
            android:id="@+id/api_selector"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"/>
        <CheckBox
            android:id="@+id/useNetworking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enable_networking"/>
        <Button
            android:id="@+id/loginButton"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"/>
    </LinearLayout>

</LinearLayout>