<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">
    <TextView
        android:visibility="gone"
        android:id="@+id/status"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_for_sdk_to_be_enabled"/>
    <LinearLayout
        android:id="@+id/detailsBox"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event_details_will_appear_below"/>
        <ListView
            android:layout_marginTop="10dp"
            android:id="@+id/eventsList"
            android:layout_width="match_parent"
            android:layout_height="250dp">
        </ListView>
        <Button
            android:id="@+id/stopSdk"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_sdk"/>
        <Button
            android:id="@+id/forcesensor"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/force_sensor_update"/>
        <Button
            android:id="@+id/ondemandlocation"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/on_demand_location"/>
        <Button
            android:id="@+id/clearlist"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_events_list"/>

    </LinearLayout>
</LinearLayout>